crates/squealy/tests/compile_fail/insert_select_nullable_source_into_non_null_target.stderr
error[E0277]: the `INSERT … SELECT` source row is not assignable to the target columns
  --> tests/compile_fail/insert_select_nullable_source_into_non_null_target.rs:21:9
   |
19 |     let _query = conn.to::<Account>().insert_select(
   |                                       ------------- required by a bound introduced by this call
20 |         |account| account.name,
21 |         conn.from::<Account>().select(|(account,)| account.label),
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `squealy::ColumnValueAssignable<std::string::String>` is not implemented for `Option<std::string::String>`
   |
   = note: the source query's projected types must match the target columns (a non-null source may fill a nullable `Option<T>` target, but not vice versa), and the arities must be equal
   = help: the following other types implement trait `squealy::InsertSelectRowCompatible<Target, Witness>`:
             `(S0, S1)` implements `squealy::InsertSelectRowCompatible<(T0, T1), squealy::TupleRow>`
             `(S0, S1, S2)` implements `squealy::InsertSelectRowCompatible<(T0, T1, T2), squealy::TupleRow>`
             `(S0, S1, S2, S3)` implements `squealy::InsertSelectRowCompatible<(T0, T1, T2, T3), squealy::TupleRow>`
             `(S0, S1, S2, S3, S4)` implements `squealy::InsertSelectRowCompatible<(T0, T1, T2, T3, T4), squealy::TupleRow>`
             `(S0, S1, S2, S3, S4, S5)` implements `squealy::InsertSelectRowCompatible<(T0, T1, T2, T3, T4, T5), squealy::TupleRow>`
             `(S0, S1, S2, S3, S4, S5, S6)` implements `squealy::InsertSelectRowCompatible<(T0, T1, T2, T3, T4, T5, T6), squealy::TupleRow>`
             `(S0, S1, S2, S3, S4, S5, S6, S7)` implements `squealy::InsertSelectRowCompatible<(T0, T1, T2, T3, T4, T5, T6, T7), squealy::TupleRow>`
             `(S0, S1, S2, S3, S4, S5, S6, S7, S8)` implements `squealy::InsertSelectRowCompatible<(T0, T1, T2, T3, T4, T5, T6, T7, T8), squealy::TupleRow>`
           and $N others
   = note: required for `Option<std::string::String>` to implement `squealy::InsertSelectRowCompatible<std::string::String, squealy::ScalarRow>`
note: required by a bound in `__SquealyAccountWriteBuilder::<'conn, Conn, HNil, HNil, HNil, squealy::MutationUnfiltered, __SquealyAccountNameWriteInsertState, __SquealyAccountLabelWriteInsertState, __SquealyAccountNameWriteUpdateState, __SquealyAccountLabelWriteUpdateState>::insert_select`
  --> tests/compile_fail/insert_select_nullable_source_into_non_null_target.rs:6:35
   |
 6 | #[derive(Clone, Debug, PartialEq, Table)]
   |                                   ^^^^^ required by this bound in `__SquealyAccountWriteBuilder::<'conn, Conn, HNil, HNil, HNil, MutationUnfiltered, __SquealyAccountNameWriteInsertState, __SquealyAccountLabelWriteInsertState, __SquealyAccountNameWriteUpdateState, __SquealyAccountLabelWriteUpdateState>::insert_select`
   = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
